[package]
name = "factoring"
version = "0.0.0"
authors = ["Mer0ps"]
edition = "2021"
publish = false

[lib]
path = "src/factoring.rs"

[dependencies.multiversx-sc]
version = "0.50.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.0"

[workspace]
members = [
    ".",
    "meta",
]
